test/expected/declare_ll-c89.out
declare x as long long x
                       ^
24: syntax error: "x": "as" expected
